modified:   README.md 	modified:   docker-compose-prod.yml 	modified:   docker-compose.yml 	modified:   geoserver/README.md 	copied:     geoserver/README.md -> geoserver/README.md.oud Update to README.md